# tengu

./: .gitconfig  .gitignore  Cargo.toml  Justfile  README.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
tengu-backend/: Cargo.toml  README.md
tengu-backend-cpu/: Cargo.toml  README.md
tengu-backend-cpu/src/: backend.rs  cast.rs  compute.rs  lib.rs  limits.rs  linker.rs  operation.rs  probe.rs  processor.rs  readout.rs  source.rs  stage.rs  tensor.rs
tengu-backend-cpu/src/operation/: compute.rs  propagate.rs  readout.rs
tengu-backend-cpu/src/processor/: compute.rs  propagate.rs  readout.rs  source.rs
tengu-backend-cpu/src/processor/source/: cast.rs  copy.rs  relational.rs
tengu-backend-cpu/src/source/: arithmetic.rs  binary.rs  cast.rs  copy.rs  relational.rs  unary_fn.rs
tengu-backend-cpu/src/tensor/: arithmetic.rs  binary.rs  cast.rs  relational.rs  unary_fn.rs
tengu-backend-tensor/: Cargo.toml  README.md
tengu-backend-tensor/src/: cast.rs  function.rs  lib.rs  operation.rs  tensor.rs  utils.rs
tengu-backend-wgpu/: Cargo.toml  README.md
tengu-backend-wgpu/src/: backend.rs  compute.rs  error.rs  lib.rs  limits.rs  linker.rs  operation.rs  probe.rs  processor.rs  readout.rs  retrieve.rs  source.rs  stage.rs  tensor.rs
tengu-backend-wgpu/src/operation/: compute.rs  propagate.rs  readout.rs
tengu-backend-wgpu/src/processor/: collector.rs  compute.rs  declarator.rs  emitter.rs  propagate.rs  readout.rs  shader_emit.rs
tengu-backend-wgpu/src/processor/compute/: block.rs  statement.rs
tengu-backend-wgpu/src/processor/propagate/: link.rs
tengu-backend-wgpu/src/processor/readout/: block.rs
tengu-backend/src/: backend.rs  compute.rs  error.rs  lib.rs  limits.rs  linker.rs  operation.rs  probe.rs  processor.rs  readout.rs  retrieve.rs  tensor.rs  types.rs
tengu-backend/src/operation/: compute.rs  propagate.rs  readout.rs
tengu-graph/: Cargo.toml  README.md
tengu-graph-tensor/: Cargo.toml
tengu-graph-tensor/src/: channel.rs  expression.rs  lib.rs  node.rs  probe.rs  tensor.rs
tengu-graph-tensor/src/expression/: arithmetic.rs  cast.rs  ops.rs  relational.rs  statement.rs  unary_fn.rs
tengu-graph-tensor/src/expression/ops/: arithmetic.rs  relational.rs
tengu-graph/examples/: mnist.rs
tengu-graph/src/: builder.rs  channel.rs  collector.rs  error.rs  expression.rs  graph.rs  lib.rs  node.rs  probe.rs  shape.rs  source.rs  tengu.rs  tensor.rs  unify.rs
tengu-graph/src/expression/: binary.rs  cast.rs  statement.rs  unary_fn.rs
tengu-graph/src/expression/ops/: arithmetic.rs  relational.rs
tengu-graph/src/graph/: block.rs  computation.rs  executor.rs  link.rs  retrieve.rs  runner.rs
tengu-graph/tests/: arithmetic.rs  cpu_vs_gpu.rs  multiblock.rs  relations.rs
tengu-tensor/: Cargo.toml
tengu-tensor-cpu/: Cargo.toml
tengu-tensor-cpu/src/: lib.rs  primitive_cast.rs  tensor.rs
tengu-tensor-cpu/src/tensor/: arithmetic.rs  cast.rs  copy_from.rs  relational.rs  unary_fn.rs
tengu-tensor-traits/: Cargo.toml
tengu-tensor-traits/src/: lib.rs  tensor.rs
tengu-tensor-wgpu/: Cargo.toml
tengu-tensor-wgpu/src/: kind.rs  lib.rs  rep.rs  tensor.rs
tengu-tensor-wgpu/src/tensor/: arithmetic.rs  cast.rs  copy_from.rs  relational.rs  unary_fn.rs
tengu-tensor/examples/: add.rs  arithmetic.rs  mnist.rs  multiblock.rs  relations.rs
tengu-tensor/src/: backend.rs  builder.rs  channel.rs  computation.rs  context.rs  emit.rs  error.rs  expression.rs  frontend.rs  function.rs  graph.rs  lib.rs  operations.rs  operator.rs  ops.rs  probe.rs  tengu.rs  tensor.rs  tensor_ops.rs  types.rs  unify.rs  visitor.rs
tengu-tensor/src/backend/: wgpu.rs
tengu-tensor/src/expression/: add.rs  binary.rs  cast.rs  ops.rs  scalar.rs  statement.rs  sub.rs  traits.rs  unary_fn.rs
tengu-tensor/src/expression/ops/: arithmetic.rs  relational.rs
tengu-tensor/src/frontend/: binary.rs  cast.rs  expression.rs  ops.rs  unary_fn.rs
tengu-tensor/src/frontend/ops/: arithmetic.rs  relational.rs
tengu-tensor/src/graph/: block.rs  computation.rs  descriptor.rs  link.rs  runner.rs
tengu-tensor/src/operations/: binary.rs
tengu-tensor/src/shaders/: add.wgsl
tengu-tensor/src/tensor/: arithmetic.rs  builder.rs  cast.rs  copy_from.rs  relational.rs  unary_fn.rs
tengu-tensor/tests/: arithmetic.rs  multiblock.rs  relations.rs
tengu-utils/: Cargo.toml  README.md
tengu-utils/src/: cage.rs  label.rs  lib.rs
tengu-wgpu/: Cargo.toml  README.md
tengu-wgpu-util/: Cargo.toml
tengu-wgpu-util/src/: adapter.rs  device.rs  error.rs  instance.rs  lib.rs  queue.rs  surface.rs  wgpu.rs
tengu-wgpu/src/: adapter.rs  bind_group.rs  buffer.rs  compute_pipeline.rs  device.rs  encoder.rs  error.rs  lib.rs  pipeline.rs  size.rs  surface.rs  wgpu.rs
tengu-wgpu/src/bind_group/: bind_entry.rs  layout_entry.rs
