[workspace]
members = [
    "tengu-backend",
    "tengu-backend-wgpu",
    "tengu-backend-cpu",
    "tengu-graph",
    "tengu-graph-tensor",
    "tengu-tensor",
    "tengu-tensor-cpu",
    "tengu-tensor-wgpu",
    "tengu-utils",
    "tengu-wgpu",
]
resolver = "2"

[workspace.dependencies]
wgpu = "22.1.0"
bytemuck = "1.18.0"
thiserror = "1.0.64"
anyhow = "1.0.89"
tracing = "0.1.40"
async-trait = "0.1.83"
flume = "0.11.0"
pretty_assertions = "1.4.1"
