[package]
name = "tengu-backend-cpu"
version = "0.1.0"
edition = "2021"

[dependencies]
tengu-backend = { path = "../tengu-backend" }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
itertools = "0.13.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
