[package]
name = "tengu-backend-cpu"
version = "0.1.0"
edition = "2021"

[dependencies]
tengu-wgpu = { path = "../tengu-wgpu" }
tengu-backend = { path = "../tengu-backend" }
tengu-backend-tensor = { path = "../tengu-backend-tensor" }
thiserror = { workspace = true }
anyhow = { workspace = true }
castaway = "0.2.3"
