[package]
name = "tengu-backend-cpu"
version = "0.1.0"
edition = "2021"

[dependencies]
tengu-wgpu = { path = "../tengu-wgpu" }
tengu-backend = { path = "../tengu-backend" }
tengu-tensor = { path = "../tengu-tensor" }
tengu-utils = { path = "../tengu-utils" }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
