[package]
name = "tengu-backend-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
tengu-wgpu = { path = "../tengu-wgpu" }
tengu-backend = { path = "../tengu-backend" }
thiserror = { workspace = true }
anyhow = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
flume = "0.11.0"
itertools = "0.13.0"
indoc = "2.0.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
regex = "1.11.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
