[package]
name = "tengu-backend-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
tengu-wgpu = { path = "../tengu-wgpu" }
tengu-backend = { path = "../tengu-backend" }
tengu-tensor = { path = "../tengu-tensor" }
tengu-tensor-wgpu = { path = "../tengu-tensor-wgpu" }
tengu-utils = { path = "../tengu-utils" }
anyhow = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
flume = { workspace = true }
itertools = "0.13.0"
indoc = "2.0.5"

[dev-dependencies]
pretty_assertions = { workspace = true }
regex = "1.11.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
