[package]
name = "tengu-graph"
version = "0.1.0"
edition = "2021"
description = "Real-time tensor graph simulation framework"
license = "MIT OR Apache-2.0"

[dependencies]
tengu-backend = { path = "../tengu-backend" }
tengu-backend-wgpu = { path = "../tengu-backend-wgpu" }
tengu-backend-cpu = { path = "../tengu-backend-cpu" }
tengu-graph-tensor = { path = "../tengu-graph-tensor" }
tengu-utils = { path = "../tengu-utils" }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
indoc = "2.0.5"
futures = "0.3.31"
as-any = "0.3.1"
num = "0.4.3"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
pretty_assertions = { workspace = true }
pollster = { version = "0.3.0", features = ["macro"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
