[package]
name = "tengu-tensor"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.3.0"
wgpu = { workspace = true }
tengu-wgpu-util = { path = "../tengu-wgpu-util" }
bytemuck = "1.17.1"
flume = "0.11.0"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
