[package]
name = "tengu-tensor"
version = "0.1.0"
edition = "2021"

[dependencies]
tengu-backend = { path = "../tengu-backend" }
tengu-backend-wgpu = { path = "../tengu-backend-wgpu" }
thiserror = { workspace = true }
anyhow = { workspace = true }
random-string = "1.1.0"
indoc = "2.0.5"
itertools = "0.13.0"
futures = "0.3.31"
as-any = "0.3.1"
num = "0.4.3"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
pollster = { version = "0.3.0", features = ["macro"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
